--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,8 @@ background-color: transparent;
   }
   p{
       color:#B9770E;
-      font-size: 18px;
+      font-size: 16px;
+      text-align: center;
   }
   .border{
      box-shadow: 0 4px 8px 0 #B9770E,0 6px 20px 0 #B9770E;
@@ -115,6 +116,9 @@ background-color: transparent;
   }
   footer{
      background: rgba(0, 0, 0, 0.3) ;
-     margin-top:80px; 
+     margin-top:500px; 
+  }
+  img{
+      margin-right: 150px;
   }
   
