i change color of backround

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ h1{
   }
   .delived{
       text-align: center;
-      color: blue;
+      color: #4f4f4f;
       background-color: #B9770E;
       /* padding-left 150px; */
       border-bottom-left-radius:100px;  
