--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,8 @@ h1{
       color:#B9770E;
       font-size: 16px;
       text-align: center;
-      
+      font-family: 'Merriweather', serif;
+      font-family: 'Noto Sans', sans-serif;  
   }
   .border{
      box-shadow: 0 4px 8px 0 #B9770E,0 6px 20px 0 #B9770E;
@@ -107,6 +108,8 @@ h1{
   .about menu{
     background-color: rgba(0, 0, 0, 0.3) ; 
     margin-top: 150px;
+    font-family: 'Merriweather', serif;
+    font-family: 'Noto Sans', sans-serif;
   }
   h3{
       color:green;
